Implement IsWindowUnderCursor()

MenuController::ShowSiblingMenu() use IsWindowUnderCursor(). On
MacViewsBrowser, it is necessary to open bookmark menus on mouse
over. So, implement the unimplemented function IsWindowUnderCursor().
Bug: 762764
Change-Id: Ifbf93085a0546f7e3c2b6070267e62212b84bddd